--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,11 @@ description: "»Feeling Responsive« is a responsive theme for Jekyll based on t
 
 # Main author of the website
 # See > authors.yml
-author: phlow
+author: jrsharp
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'https://phlow.github.io/feeling-responsive'
+url: 'http://blog.jonsharp.net'
 baseurl: ''
 
 # This is for the editing function in _/includes/improve_content
@@ -110,7 +110,7 @@ defaults:
       show_meta: true   # Show metadata for all posts
       # sidebar:        # Possible values › left, right › by default there will be no sidebar
       comments: false
-      author: phlow     # Default author for posts
+      author: jrsharp     # Default author for posts
 
 
 
