--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -5,7 +5,8 @@
 #
 # Start development with › $ jekyll serve --config _config.yml,_config_dev.yml
 
-url: 'http://localhost:4000'
+#url: 'http://localhost:4000'
+url: 'http://172.21.21.105:4000'
 
 sass:
   # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
